<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_edit_profile"
        android:title="@string/edit_profile"
        android:icon="@drawable/ic_edit_black_24dp"
        app:showAsAction="always"
        android:contentDescription="@string/edit_profile"/>
</menu>

