...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/navigation_title_profile" />

    <item
        android:id="@+id/navigation_relation"
        android:icon="@drawable/ic_current_relation_black_24dp"
...
